...
                android:textColor="#030303"
                android:textSize="18dp"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="Ladarat"
                android:textColor="#030303"
                android:textSize="18dp" />
...
                android:text="Age : "
                android:textColor="#030303"
                android:textSize="18dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:lines="1"
                android:text="20"
                android:textColor="#030303"
...
